# mp3diags

./: .git_store_meta  .gitattributes  .gitignore  AdjustMt.sh  Build-CMake-VS2022.cmd  Build.sh  BuildBz2.sh  BuildMp3Diags.hta  BuildWithStaticSer.sh  CMake-VS2008-Win32.cmd  CMakeLists.txt  CMakePresets.json  COPYING  CopyToSf.sh  Doxyfile  Install.bat  Install.sh  MP3DiagsCLI-unstable.cmd  MP3DiagsCLI.cmd  MP3DiagsIcon.rc  MakeArchives.sh  MakeTranslations.sh  README.TXT  README.md  Rebuild-Transl-_ts-Files.sh  RebuildUkTransl.sh  Release.txt  Uninstall.sh  branch.txt  changelog.txt  changelogDeb.txt  changelogRpm.txt  mp3diags.kdevelop  mp3diags.kdevses  mp3diags.pro
Windows/: MP3Diags-unstable.nsi  MP3Diags.nsi  MP3DiagsUnstable.nsi  Mp3DiagsWindows.pro  README.TXT  build.bat
desktop/: MP3Diags-unstable16.xcf  MP3Diags-unstable22.xcf  MP3Diags-unstable32.xcf  MP3Diags.desktop  MP3Diags16.xcf  MP3Diags36.xcf  MP3Diags48.xcf  MP3DiagsBckg.xcf  mp3.xcf  mp3diags-unstable.desktop  mp3diags-unstable22.xcf  mp3diags-unstable24.xcf  mp3diags-unstable32.xcf  mp3diags-unstable36.xcf  mp3diags-unstable40.xcf  mp3diags-unstable48.xcf
doc/: 010_windows_warnings.xcf  050_assert.xcf  110_first_run.xcf  120_first_scan.xcf  130_main_window.xcf  140_main_window_tools.xcf  150_main_window_all_notes.xcf  160_main_window_tag_details.xcf  170_note_filter.xcf  180_folder_filter.xcf  190_tag_editor.xcf  200_discogs_query.xcf  210_tag_editor_assign_image.xcf  220_tag_editor_patterns.xcf  230_normalize.xcf  240_file_renamer.xcf  250_config_files.xcf  250_config_files_full.xcf  260_config_ignored_notes.xcf  270_config_custom_transf.xcf  280_config_quality.xcf  290_config_transf_params.xcf  292_config_vis_transf.xcf  295_config_quality.xcf  297_config_colors.xcf  298_config_shell.xcf  299_ext_tools.xcf  300_config_others.xcf  310_export.xcf  310_sessions.xcf  BubbleText.txt  BubbleText.txt~  Doc.01.odt  Qt LGPL V2.1 licensing.html  bubble-info.txt  bubblemaker  doc texts (obsolete).dia  email.xcf  favicon.xcf  gimp-antialiased-lines.txt  (+3 more)
doc/Qt LGPL V2.1 licensing_files/: jquery-cachekey0105.js
doc/html/: 000_makeNoCount.sh  004_screenshot01.html  005_screenshot02.html  006_screenshot03.html  008_licence.html  010_getting_the_program.html  010_getting_the_program_local.html  015_changelog.html  020_mp3_introduction.html  030_users_guide.html  035_suggested_usage.html  040_limitations.html  050_feedback.html  060_notes_for_programmers.html  070_miscellaneous.html  110_first_run.html  120_first_scan.html  130_main_window.html  140_main_window_tools.html  145_transformations_list.html  150_main_window_all_notes.html  160_main_window_tag_details.html  170_note_filter.html  180_folder_filter.html  190_tag_editor.html  200_discogs_query.html  210_tag_editor_assign_image.html  220_tag_editor_patterns.html  230_normalize.html  240_file_renamer.html  250_config_files.html  260_config_ignored_notes.html  270_config_custom_transf.html  280_config_quality.html  290_config_transf_params.html  292_config_visible_transf.html  295_config_quality.html  297_config_colors.html  298_config_shell.html  299_ext_tools.html  (+7 more)
package/: AddChangeLog.py  pad_file.xml
package/Rpm/: MP3Diags-Mandriva_2009.1.spec  MP3Diags.spec
package/SPECS/: MP3Diags.spec
package/Ubuntu/: MP3Diags.dsc  debian.control
package/deb/: MP3Diags.dsc  debian.changelog  debian.control  debian.rules
package/rpm/: MP3Diags-Mandriva_2009.1.spec  MP3Diags.spec
package/subversion/: linux_downloads.html
src/: About.ui  AboutDlgImpl.cpp  AboutDlgImpl.h  AlbumInfoDownloader.ui  AlbumInfoDownloaderDlgImpl.cpp  AlbumInfoDownloaderDlgImpl.h  ApeStream.cpp  ApeStream.h  CbException.cpp  CbException.h  CheckedDir.cpp  CheckedDir.h  ColumnResizer.cpp  ColumnResizer.h  CommonData.cpp  CommonData.h  CommonTypes.cpp  CommonTypes.h  Config.ui  ConfigDlgImpl.cpp  ConfigDlgImpl.h  DataStream.cpp  DataStream.h  Debug.ui  DebugDlgImpl.cpp  DebugDlgImpl.h  DirFilter.ui  DirFilterDlgImpl.cpp  DirFilterDlgImpl.h  DiscogsDownloader.cpp  DiscogsDownloader.h  DoubleList.cpp  DoubleList.h  DoubleListWdg.ui  Export.ui  ExportDlgImpl.cpp  ExportDlgImpl.h  ExternalTool.ui  ExternalToolDlgImpl.cpp  ExternalToolDlgImpl.h  (+115 more)
src/images/: COPYING-GPL.V3.txt  COPYING-LGPL.V3.txt  mp3.xpm
src/licences/: lgpl-2.1.txt  zlib.txt
src/translations/: mp3diags_cs.ts  mp3diags_de_DE.ts  mp3diags_fr_FR.ts  mp3diags_tr_TR.ts
src/translations/autoTransl/: MixedCase.cpp
templates/: cpp
tests/: .gitignore  ConvertWindowsExport.sh  RunTests.sh  SortGuiExport.sh
